--- a/expert.html
+++ b/expert.html
@@ -84,7 +84,7 @@
 
     <footer class="p-2 bg-dark text-white text-center position-fixed bottom-0 w-100">
         <div class="container footer">
-            <p class="lead">WEBPROG IT225<br>&copy; Group 2 - Bernardo, Briones, Cada&ntildea, Ferrer</p>
+            <p class="lead">WEBPROG IT225<br>&copy; Group 2 - Bernardo, Briones, Cadano, Ferrer</p>
         </div>
     </footer>
 </body>
