--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 <body>
 
+    <section class="p-5 text-center">
+
     <div id="custom-container">
         <div id="cross">
             <h1>CROSSED</h1>
@@ -57,6 +59,8 @@
 
     <div id="background"></div>
 
+
+
     <script>
         function toggleDifficultyOptions() {
             const difficultyOptions = document.querySelector('.difficulty-options');
@@ -92,7 +96,7 @@
 
     </script>
 
-    <footer class="p-2 bg-dark text-white text-center position-fixed bottom-0 w-100">
+    <footer class="p-2 bg-dark text-white text-center w-100">
         <div class="container">
             <p class="lead">WEBPROG IT225<br>&copy; Group 2 - Bernardo, Briones, Cadano, Ferrer</p>
         </div>
