--- a/expert.html
+++ b/expert.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+    <section class="p-5 text-center">
     <div class="header">
     </div>
 
@@ -79,10 +81,11 @@
         </a>
 
     </div>
+    </section>
 
     <script src="expert.js"></script>
 
-    <footer class="p-2 bg-dark text-white text-center position-fixed bottom-0 w-100">
+    <footer class="p-2 bg-dark text-white text-center w-100">
         <div class="container footer">
             <p class="lead">WEBPROG IT225<br>&copy; Group 2 - Bernardo, Briones, Cadano, Ferrer</p>
         </div>
