--- a/easy.html
+++ b/easy.html
@@ -16,6 +16,8 @@
 
 <body>
 
+    <section class="p-5 text-center">
+
     <div class="header">
     </div>
 
@@ -77,9 +79,11 @@
         </a>
     </div>
 
+    </section>
+
     <script src="easy.js"></script>
 
-    <footer class="p-2 bg-dark text-white text-center position-fixed bottom-0 w-100">
+    <footer class="p-2 bg-dark text-white text-center w-100">
         <div class="container footer">
             <p class="lead">WEBPROG IT225<br>&copy; Group 2 - Bernardo, Briones, Cadano, Ferrer</p>
         </div>
